js/js.translator/testData/incremental/invalidationWithPL/moveSuspendFunctionBetweenModules/lib2/l2.1.kt
package sample

suspend fun foo(): Int = 1
